--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/yourusername/your-chess-game"
+    "url": "https://github.com/AshutoshGupta6489/chessgamereactpackage.git"
   },
   "devDependencies": {
     "@babel/core": "^7.23.0",
