fixed issue with logic of pawn and added history feature

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "component",
     ""
   ],
-  "author": "Ashutosh",
+  "author": "Ashutosh Gupta <ashutoshgupta6480@gmail.com>",
   "license": "MIT",
   "babel": {
     "sourceType": "unambiguous",
